# netperf

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check.yml  test.yml
crates/netperf-core/: Cargo.toml
crates/netperf-core/src/: lib.rs  stats.rs  ui.rs
crates/netperf-p2/: Cargo.toml
crates/netperf-p2/src/: controller.rs  main.rs  server.rs
crates/netperf-p2/src/common/: control.rs  data.rs  opts.rs  stream_worker.rs  ui.rs
crates/netperf-p3/: Cargo.toml  README.md
crates/netperf-p3-host/: Cargo.toml
crates/netperf-p3-host/src/: main.rs
crates/netperf-p3/src/: lib.rs
crates/netperf-p3/wit/: world.wit
experiments/wasi-p3-native-async/: README.md
experiments/wasi-p3-native-async/p3echo/: Cargo.toml
experiments/wasi-p3-native-async/p3echo/src/: lib.rs
experiments/wasi-p3-native-async/p3echo/wit/: echo-world.wit
experiments/wasi-p3-native-async/p3host/: Cargo.toml
experiments/wasi-p3-native-async/p3host/src/: main.rs
src/: main.rs
src/common/: control.rs  data.rs  opts.rs  stream_worker.rs  ui.rs
tools/: host-flamegraph.sh  p2-flamegraph.sh  p2-resymbolicate-kernel.sh  p3-flamegraph.sh  resymbolicate-kernel.sh  run-p2.sh  run-p3.sh  run.sh  symbolicate_stacks.py
