# Virtual workspace for the WASI/wasm side: a shared core plus the two transports
# (p2 / p3), all built for wasm32-wasip2. The native wasmtime host that *runs* the
# p3 component is the one crate excluded — it targets the host, not wasm, so it
# can't be built with `--target wasm32-wasip2` alongside these.
[workspace]
resolver = "2"
members = ["crates/netperf-core", "crates/netperf-p2", "crates/netperf-p3"]
exclude = ["crates/netperf-p3-host"]
