# Virtual workspace for the WASI/wasm side: a shared core plus the two transports
# (p2 / p3), all built for wasm32-wasip2. The native wasmtime host that *runs* the
# p3 component is the one crate excluded — it targets the host, not wasm, so it
# can't be built with `--target wasm32-wasip2` alongside these.
[workspace]
resolver = "2"
members = ["crates/netperf-core", "crates/netperf-p2", "crates/netperf-p3"]
exclude = ["crates/netperf-p3-host"]

# Build the p3 guest for speed: it's a throughput benchmark, and opt-level=3 is
# ~12% faster than "s" in the small-block (per-op-bound) regime, neutral at large
# blocks, for ~0.9% more wasm. Must live at the workspace root — Cargo ignores a
# [profile.release] declared inside a non-root member crate.
[profile.release.package.netperf-p3]
opt-level = 3
