[package]
name = "netperf-p2"
version = "0.2.9"
description = "Network performance tool — WASI 0.2 (wasm32-wasip2) + tokio build"
authors = ["Ahmed Farghal <me@asoli.dev>"]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["network", "performance", "iperf3", "wasi"]
categories = ["command-line-utilities", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
colored = "3.1"
env_logger = "0.11.8"
log = "0.4.17"
bytes = "1.4.0"
getrandom = "0.3"
clap-verbosity-flag = "3.0.2"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
cling = { version = "0.1" }
tokio = { version = "1.52", features = [
  "rt",
  "net",
  "time",
  "sync",
  "macros",
  "io-util",
] }
uuid = { version = "1.23", default-features = false, features = ["v4"] }
clap = { version = "4.6.1", features = ["color", "derive"] }
netperf-core = { path = "../netperf-core" }

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.52", features = ["test-util"] }
tokio-stream = "0.1.17"
