[package]
name = "p3echo"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.58"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.3"
netperf-core = { path = "../../../netperf-core" }

[profile.release]
opt-level = "s"
